more explicit cors logic